--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +7,15 @@
     <title>Página de Encriptación</title>
     <link rel="stylesheet" type="text/css" href="/layout/style.css">
 </head>
-
 <body>
     <div id="app">
+        <object data="/assets/Logo.svg" class="logo-top-left"></object>
         <main class="encryption-app">
-            <object data="/assets/Logo.svg" class="logo"></object>
+            <!-- Aplica la nueva clase aquí -->
+            
             <section class="left-section">
                 <div class="input-container">
-                    <input type="text" id="inputText" placeholder="Ingrese el texto...">
+                    <input type="text" id="inputText" placeholder="Ingrese el texto aquí">
                     <footer class="note">
                         <object data="./assets/bi_exclamation-circle-fill.svg" class="icon"></object>
                         <label for="inputText">Solo letras minúsculas y sin acentos</label>
@@ -35,5 +35,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
