--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500">
     <title>Página de Encriptación</title>
-    <link rel="stylesheet" type="text/css" href="/layout/style.css">
+    <link rel="stylesheet" type="text/css" href="layout/style.css">
 </head>
 <body>
     <div id="app">
-        <object data="/assets/Logo.svg" class="logo-top-left"></object>
+        <object data="assets/Logo.svg" class="logo-top-left"></object>
         <main class="encryption-app">
-            <!-- Aplica la nueva clase aquí -->
-            
             <section class="left-section">
                 <div class="input-container">
-                    <input type="text" id="inputText" placeholder="Ingrese el texto aquí">
+                    <textarea id="inputText" placeholder="Ingrese el texto aquí"></textarea>
                     <footer class="note">
-                        <object data="./assets/bi_exclamation-circle-fill.svg" class="icon"></object>
+                        <object data="assets/bi_exclamation-circle-fill.svg" class="icon"></object>
                         <label for="inputText">Solo letras minúsculas y sin acentos</label>
                     </footer>
                     <div class="buttons">
