--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <div id="app">
         <object data="assets/Logo.svg" class="logo-top-left"></object>
+        <button id="toggleTheme" class="theme-toggle-button">
+            <img id="themeIcon" src="assets/moon.svg" alt="Moon icon">
+        </button>
         <main class="encryption-app">
             <section class="left-section">
                 <div class="input-container">
